--- a/index.html
+++ b/index.html
@@ -7,8 +7,9 @@
 		<hr>
 			<!--<a href="http://somegreatsite.com">Link Name</a>
 				is a link to another nifty site-->
-			<h1>Under Construction</h1>
-			<h2>New website comming soon!</h2>
+			<h1>Still Under Construction</h1>
+			<h2>LINKS</h2>
+            <a href="Network_Tunneling/Network Tunneling_ The Not-So-Great Escape (Part 1).html">Network Tunneling_ The Not-So-Great Escape (Part 1)</a>
 		<hr>
 	</body>
 </html>
