--- a/puzzle/365fc8957a19ce76ee1247719e46f3ff/index.html
+++ b/puzzle/365fc8957a19ce76ee1247719e46f3ff/index.html
@@ -12,7 +12,7 @@
 
         <h1 style="color:white">WELL DONE</h1>        
         <p style="color:white"> You were able to outsmart the diabolical creator of that dreadful puzzle and open the safe.</p>
-        <p style="color:white"> Upon touching the gold bar you hear a hidden door unlock to the east. Your next adventure awaits there.</p>
+        <p style="color:white"> Upon touching the gold bar you hear a hidden door unlock and open to the east. Your next adventure awaits there.</p>
         <br>
         <p style="color:gray"> -- The next adventure is not quite ready; be patient and check back later for the next download-- </p>
     </body>
