--- a/puzzle/365fc8957a19ce76ee1247719e46f3ff/index.html
+++ b/puzzle/365fc8957a19ce76ee1247719e46f3ff/index.html
@@ -5,10 +5,10 @@
     h1 {text-align: center; font-family:'Courier New'}
     p {text-align: center; font-family:'Courier New'}
 </style>
-    <title>Magic Box</title>
+    <title>Odd Box</title>
     
     
-    <body style="background-image: url('bg.jpg');">
+    <body style="background-image: url('bg.jpg'); background-repeat:no-repeat; background-size: 100%;">
 
         <h1 style="color:white">WELL DONE</h1>        
         <p style="color:white"> You were able to outsmart the diabolical creator of that dreadful puzzle and open the safe.</p>
@@ -17,3 +17,5 @@
         <p style="color:gray"> -- The next adventure is not quite ready; be patient and check back later for the next download -- </p>
     </body>
 </html>
+
+
